--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,4 @@
 [package]
 name = "network"
 version = "0.1.0"
-authors = ["Abhishek Chanda <abhishek@cloudscaling.com>"]
+authors = ["Abhishek Chanda <abhishe.becsk@gmail.com>"]
