--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,6 @@
 [package]
-name = "network"
+name = "ipnetwork"
 version = "0.1.0"
 authors = ["Abhishek Chanda <abhishe.becsk@gmail.com>"]
+description = "A library to work with IP CIDRs in Rust, heavily WIP"
+license = "Apache-2.0"
