Add a rust-ci docs config

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,14 @@
 language: rust
 rust: nightly
+env:
+  global:
+    - secure: gokQ7xIWwmAuEUW3IyS5B/pbZxdFSSDBto5beJ+4ACGcRMDqJ/eCPf1ekSVXME4TWM46uUCjxcdUjYhIhQ6sG4zfWck4u45qRJ5JbIoTvR+ykxhN1j3Zi5x9ptP3ALDbHn2i3v6t9xohORfQpz3dVND5c7thbYDyKP2ZR1sez5c=
+
+script:
+  - cargo build --verbose
+  - cargo test --verbose
+  - cargo build --release --verbose
+  - cargo doc --verbose
+
+after_script:
+  - curl http://www.rust-ci.org/artifacts/put?t=$RUSTCI_TOKEN | sh
