--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,10 @@ authors = ["Abhishek Chanda <abhishe.becsk@gmail.com>"]
 description = "A library to work with IP CIDRs in Rust, heavily WIP"
 license = "Apache-2.0"
 repository = "https://github.com/achanda/ipnetwork"
+
+[dependencies]
+clippy = {version = "0.0.21", optional = true}
+
+[features]
+default = []
+dev = ["clippy"]
