--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "ipnetwork"
 version = "0.7.0"
-authors = ["Abhishek Chanda <abhishe.becsk@gmail.com>"]
+authors = ["Abhishek Chanda <abhishe.becsk@gmail.com>", "Linus Färnstrand <faern@faern.net>"]
 description = "A library to work with IP CIDRs in Rust, heavily WIP"
 license = "Apache-2.0"
 repository = "https://github.com/achanda/ipnetwork"
