--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,13 @@
 [package]
 name = "ipnetwork"
-version = "0.12.0"
+version = "0.12.1"
 authors = ["Abhishek Chanda <abhishek.becs@gmail.com>", "Linus Färnstrand <faern@faern.net>"]
 description = "A library to work with IP CIDRs in Rust, heavily WIP"
 license = "Apache-2.0"
 repository = "https://github.com/achanda/ipnetwork"
+keywords = ["network", "ip", "address"]
+readme = "README.md"
+documentation = "https://docs.rs/ipnetwork/"
 
 [dependencies]
 clippy = {version = "0.0.104", optional = true}
