--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ categories = ["network-programming", "os"]
 
 [dependencies]
 clippy = {version = "0.0.104", optional = true}
+serde = { version = ">=0.8.0, <2.0", optional = true }
+serde_derive = { version = ">=0.8.0, <2.0", optional = true }
 
 [badges]
 travis-ci = { repository = "achanda/ipnetwork" }
@@ -21,3 +23,4 @@ default = []
 dev = ["clippy"]
 ipv6-iterator = []
 ipv6-methods = []
+with-serde = ["serde", "serde_derive"]
