--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,9 @@ clippy = {version = "0.0.104", optional = true}
 serde = { version = ">=0.8.0, <2.0", optional = true }
 serde_derive = { version = ">=0.8.0, <2.0", optional = true }
 
+[dev-dependencies]
+serde_json = "*"
+
 [badges]
 travis-ci = { repository = "achanda/ipnetwork" }
 
