--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ serde = { version = ">=0.8.0, <2.0", optional = true }
 serde_derive = { version = ">=0.8.0, <2.0", optional = true }
 
 [dev-dependencies]
-serde_json = "*"
+serde_json = "1.0"
 
 [badges]
 travis-ci = { repository = "achanda/ipnetwork" }
