--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,8 @@ categories = ["network-programming", "os"]
 
 [dependencies]
 clippy = {version = "0.0.104", optional = true}
-serde = { version = ">=0.8.0, <2.0", optional = true }
-serde_derive = { version = ">=0.8.0, <2.0", optional = true }
+serde = ">=0.8.0, <2.0"
+serde_derive = ">=0.8.0, <2.0"
 
 [dev-dependencies]
 serde_json = "1.0"
