Show current git branch

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,6 +18,8 @@ jobs:
     - uses: actions/checkout@master
       with:
         ref: ${{ github.ref }}
+    - name: Show current git branch
+      run: git branch
     - name: Build
       run: cargo build --verbose
     - name: Run tests
