Test without features on CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,8 @@ env:
     - FEATURES: default
 
 script:
+  - cargo build --verbose --no-default-features
+  - cargo test --verbose --no-default-features
   - cargo build --verbose
   - cargo test --verbose
   - cargo build --release --verbose
