Set a maintenance status
Putting this as passively-maintained since this crate is mostly feature
complete.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ criterion = "0.3.0"
 
 [badges]
 travis-ci = { repository = "achanda/ipnetwork" }
+maintenance = { status = "passively-maintained" }
 
 [features]
 default = ["serde"]
