--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ serde = { version = "1", optional = true }
 [dev-dependencies]
 serde_json = "1.0"
 serde_derive = "1"
-criterion = "0.3.0"
+criterion = {version = "0.3.4", features= ["html_reports"]}
 
 [badges]
 travis-ci = { repository = "achanda/ipnetwork" }
