--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,19 +1,27 @@
-name: Publish to crates.io
+name: Release-plz
+
+permissions:
+  pull-requests: write
+  contents: write
+
 on:
-  workflow_dispatch:
   push:
-    tags:        
-      - 'v.*.*'
-      
+    branches:
+      - main
+
 jobs:
-  publish:
+  release-plz:
+    name: Release-plz
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-    - uses: actions-rs/toolchain@v1
-      with:
-          toolchain: stable
-          override: true
-    - uses: katyo/publish-crates@v2
-      with:
-          registry-token: ${{ secrets.CARGO_REGISTRY_TOKEN }}
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - name: Install Rust toolchain
+        uses: dtolnay/rust-toolchain@stable
+      - name: Run release-plz
+        uses: MarcoIeni/release-plz-action@v0.5
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
