Make the serde feature opt-in instead of opt-out
Most people add dependencies without checking their features
or optional dependencies too carefully. This leads to them pulling in
transitive dependencies they likely don't need.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,10 @@ travis-ci = { repository = "achanda/ipnetwork" }
 maintenance = { status = "passively-maintained" }
 
 [features]
-default = ["serde"]
+# Keep optional dependencies out of the default features.
+# Since most people add a dependency without `default-features = false` they involuntarily
+# pull in unused dependencies.
+default = []
 
 [[bench]]
 name = "parse_bench"
