--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ keywords = ["network", "ip", "address", "cidr"]
 readme = "README.md"
 categories = ["network-programming", "parser-implementations"]
 edition = "2021"
+rust-version = "1.80.0"
 
 [dependencies]
 serde = { version = "1.0.200", optional = true }
